--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
 
     <dimen name="default_screen_padding">24dp</dimen>
+
+    <dimen name="padding_margin_16">16dp</dimen>
+
 </resources>
