--- a/app/src/main/res/layout/forecast_fragment.xml
+++ b/app/src/main/res/layout/forecast_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.sample.openweathermap.ui.currentcity.CurrentCityViewModel" />
+            type="com.sample.openweathermap.ui.forcast.ForecastViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
