--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -15,6 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rootConstraintLayout"
         android:layout_width="match_parent"
+        android:background="@color/colorWhite"
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
