--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -31,6 +31,7 @@
                 android:digits="@string/_alphabetical_comma"
                 android:hint="@string/weather_hint"
                 android:inputType="text"
+                android:imeOptions="actionDone"
                 android:text="@={viewModel.citiesNames}" />
 
         </com.google.android.material.textfield.TextInputLayout>
