--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorTransparent">#00FFFFFF</color>
+    <color name="colorWhite">#FFFFFFFF</color>
 
 </resources>
